Bug 1823744 - Unbreak switching identity in compose window using mouse. r=aleca
Flex 1000 was pushing the clickable content out of view.

Differential Revision: https://phabricator.services.mozilla.com/D173382

--HG--
extra : rebase_source : 8066258de43ceaceddadb3ae73a25619b799b698
extra : amend_source : 72a5774753a2fb5fdf48e14dafb0e8021b8244d6

--- a/mail/themes/shared/mail/messengercompose.css
+++ b/mail/themes/shared/mail/messengercompose.css
@@ -551,15 +551,11 @@
   list-style-image: var(--icon-print);
 }
 
-.menu-description {
-  flex: 10000 10000;
-}
-
 .menu-description,
 menulist::part(description) {
   font-style: italic;
   opacity: 0.55;
-  margin-inline-start: 1ex !important;
+  margin-inline: 1ex !important;
 }
 
 .aw-firstColBox {
